--- a/.github/workflows/go-ci.yml
+++ b/.github/workflows/go-ci.yml
@@ -22,5 +22,11 @@ jobs:
     - name: Install dependencies
       run: go mod tidy
 
+    # To enable OpenAI live integration test, uncomment and set these secrets or env vars:
+    # env:
+    #   LLM_PROVIDER: openai
+    #   OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+    #   OPENAI_MODEL: gpt-3.5-turbo
+
     - name: Run tests
-      run: go test ./...
+      run: go test -v ./...
