--- a/configs/composite_score_config.json
+++ b/configs/composite_score_config.json
@@ -15,7 +15,7 @@
   "models": [
     {
       "perspective": "left",
-      "modelName": "qwen/qwen-2.5-7b-instruct:free",
+      "modelName": "openai/gpt-3.5-turbo",
       "url": "https://openrouter.ai/api/v1"
     },
     {
