--- a/configs/composite_score_config.json
+++ b/configs/composite_score_config.json
@@ -15,17 +15,17 @@
   "models": [
     {
       "perspective": "left",
-      "modelName": "openai/gpt-3.5-turbo",
+      "modelName": "tokyotech-llm/llama-3.1-swallow-8b-instruct-v0.3",
       "url": "https://openrouter.ai/api/v1"
     },
     {
       "perspective": "center",
-      "modelName": "mistralai/mistral-7b-instruct:free",
+      "modelName": "mistralai/mistral-small-3.1-24b-instruct",
       "url": "https://openrouter.ai/api/v1"
     },
     {
       "perspective": "right",
-      "modelName": "google/gemini-flash-1.5-8b-exp",
+      "modelName": "google/gemini-2.0-flash-001",
       "url": "https://openrouter.ai/api/v1"
     }
   ]
