--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,10 @@ go.work.sum
 cypress/screenshots/
 cypress/videos/
 e2e_snapshots/
+
+# Playwright
+node_modules/
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
