refactoring error handling

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
         "connectionId": "alexandru-savinov",
         "projectKey": "alexandru-savinov_BalancedNewsGo"
     },
-    "zencoder.enableRepoIndexing": true
+    "zencoder.enableRepoIndexing": true,
+    "cline.mcpMarketplace.enabled": false
 }
