refactor: remove unused frontend components and services
- Deleted HomePage component as it was no longer needed.
- Removed apiClient, articleService, feedbackService, and sseService due to refactoring.
- Cleaned up store and types related to articles and feedback.
- Removed Playwright tests for backend API and score calculator as they are no longer applicable.
- Deleted TypeScript configuration files and Vite configuration as part of the cleanup.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,6 @@
         "projectKey": "alexandru-savinov_BalancedNewsGo"
     },
     "zencoder.enableRepoIndexing": true,
-    "cline.mcpMarketplace.enabled": false
+    "cline.mcpMarketplace.enabled": false,
+    "git.ignoreLimitWarning": true
 }
