--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,6 @@
     },
     "zencoder.enableRepoIndexing": true,
     "cline.mcpMarketplace.enabled": false,
-    "git.ignoreLimitWarning": true
+    "git.ignoreLimitWarning": true,
+    "makefile.configureOnOpen": false
 }
