--- a/configs/composite_score_config.json
+++ b/configs/composite_score_config.json
@@ -16,12 +16,17 @@
       "weight": 1.0
     }
   ],
-  "aggregationMethod": "weighted_mean",
+  "formula": "weighted",
   "confidenceMethod": "count_valid",
-  "minScore": -1.0,
-  "maxScore": 1.0,
-  "defaultMissing": 0.0,
-  "minConfidence": 0.1,
-  "maxConfidence": 0.95,
-  "handleInvalid": "default"
+  "min_score": -1.0,
+  "max_score": 1.0,
+  "default_missing": 0.0,
+  "min_confidence": 0.1,
+  "max_confidence": 0.95,
+  "handle_invalid": "default",
+  "weights": {
+    "left": 1.0,
+    "center": 1.0,
+    "right": 1.0
+  }
 }
