--- a/configs/composite_score_config.json
+++ b/configs/composite_score_config.json
@@ -16,8 +16,8 @@
       "weight": 1.0
     }
   ],
-  "formula": "weighted",
-  "confidenceMethod": "count_valid",
+  "formula": "average",
+  "confidence_method": "count_valid",
   "min_score": -1.0,
   "max_score": 1.0,
   "default_missing": 0.0,
