feat: Persist final article status in DB on scoring completion/error
- Define article status constants in internal/models/article_status.go.

- Add db.UpdateArticleStatus function.

- Modify ScoreManager.UpdateArticleScore to call UpdateArticleStatus with appropriate status (scored, failed_all_invalid, failed_zero_confidence, failed_error) upon completion or specific errors.

- Refactor cmd/score_articles to use ScoreManager for composite score calculation and status updates.

- Update docs/PR/handle_total_analysis_failure.md with findings about status persistence.

- Resolve duplicate struct/constant definitions between llm.go, config.go, and composite_score_utils.go.

- Fix missing ModelConfig definition in config.go.

- Ensure article insertion sets default status.

--- a/configs/composite_score_config.json
+++ b/configs/composite_score_config.json
@@ -26,7 +26,7 @@
   "default_missing": 0.0,
   "min_confidence": 0.1,
   "max_confidence": 0.95,
-  "handle_invalid": "default",
+  "handle_invalid": "ignore",
   "weights": {
     "left": 1.0,
     "center": 1.0,
