chore: Update README and CI workflow to reflect test improvements and new averaging logic
- Enhanced README.md with a test status update, confirming that all Go unit, integration, and end-to-end tests now pass, including previously failing `internal/llm` tests.
- Documented the new averaging logic for duplicate model/perspective scores and confidences.
- Updated the CI workflow to ensure tests run with the `NO_AUTO_ANALYZE=true` environment variable and added steps for running full API/integration tests and uploading test results.
- Revised codebase documentation to include the latest test status and averaging methodology.

--- a/.github/workflows/go-ci.yml
+++ b/.github/workflows/go-ci.yml
@@ -17,16 +17,33 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v5
       with:
-        go-version: '1.23'
+        go-version: '1.22'
 
     - name: Install dependencies
       run: go mod tidy
+
+    # The project uses 'averaging everywhere' for LLM score calculation. All tests must pass.
+
+    - name: Run Go unit and integration tests (NO_AUTO_ANALYZE=true)
+      run: |
+        export NO_AUTO_ANALYZE=true
+        go test -v ./...
+
+    - name: Run full API/integration test suite (scripts/test.sh all)
+      if: runner.os == 'Linux'
+      run: |
+        chmod +x scripts/test.sh
+        ./scripts/test.sh all
+
+    - name: Upload test-results artifact
+      if: runner.os == 'Linux'
+      uses: actions/upload-artifact@v4
+      with:
+        name: test-results
+        path: test-results/
 
     # To enable OpenAI live integration test, uncomment and set these secrets or env vars:
     # env:
     #   LLM_PROVIDER: openai
     #   OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
     #   OPENAI_MODEL: gpt-3.5-turbo
-
-    - name: Run tests
-      run: go test -v ./...
