--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/alexandru-savinov/BalancedNewsGo#readme",
   "description": "",
   "devDependencies": {
+    "@stoplight/spectral-cli": "^6.11.0",
     "@types/eventsource": "^1.1.15",
     "@types/node": "^22.14.1",
     "eventsource": "^3.0.6",
