refactor: update Makefile and golangci configuration for improved tool paths
This commit modifies the Makefile to update paths for various tools, ensuring they point to the correct main.go files in their respective directories. Additionally, the golangci configuration is updated to ignore specific linting errors for main.go files located in tools subdirectories. These changes enhance the build process and maintain consistency in tool usage.

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -50,7 +50,7 @@ issues:
       linters:
         - funlen
         - gocyclo
-    - path: tools/.*\.go # Regex to match any .go file in the tools directory
+    - path: tools/.*/main\.go # Regex to match any main.go file in a tools subdirectory
       text: "main redeclared in this block" # The specific error message to ignore
     - linters:
         - dupl
