--- a/.github/workflows/go-ci.yml
+++ b/.github/workflows/go-ci.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Run Go unit and integration tests (NO_AUTO_ANALYZE=true)
       run: |
         export NO_AUTO_ANALYZE=true
-        go test -v ./...
+        go test -v -coverprofile=coverage.out ./...
 
     - name: Run full API/integration test suite (scripts/test.sh all)
       if: runner.os == 'Linux'
@@ -41,6 +41,23 @@ jobs:
       with:
         name: test-results
         path: test-results/
+    - name: Generate coverage summary
+      run: |
+        go tool cover -func=coverage.out -o coverage-summary.txt
+
+    - name: Generate coverage badge
+      uses: go-coverage/go-coverage-badge@v1
+      with:
+        coverage-file: coverage.out
+
+    - name: Upload coverage artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: coverage
+        path: |
+          coverage.out
+          coverage-summary.txt
+          coverage-badge.svg
 
     # To enable OpenAI live integration test, uncomment and set these secrets or env vars:
     # env:
