--- a/.github/workflows/go-ci.yml
+++ b/.github/workflows/go-ci.yml
@@ -46,9 +46,9 @@ jobs:
         go tool cover -func=coverage.out -o coverage-summary.txt
 
     - name: Generate coverage badge
-      uses: go-coverage/go-coverage-badge@v1
+      uses: tj-actions/coverage-badge-go@v2
       with:
-        coverage-file: coverage.out
+        go-test-cover-profile: coverage.out
 
     - name: Upload coverage artifact
       uses: actions/upload-artifact@v4
