--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,1 +1,28 @@
-repos: [] # pre-commit hooks temporarily disabled
+exclude: '^(node_modules|p|backup)/'
+repos:
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: "v4.3.0"
+    hooks:
+      - id: end-of-file-fixer
+      - id: trailing-whitespace
+      - id: check-yaml
+      - id: check-added-large-files
+  - repo: https://github.com/dnephin/pre-commit-golang
+    rev: "v0.5.1"
+    hooks:
+      - id: go-mod-tidy
+        files: "^go\\.mod$"
+      - id: go-fmt
+        args: ["-s"]
+        files: "^(cmd|internal)/.*\\.go$"
+      - id: go-imports
+        files: "^(cmd|internal)/.*\\.go$"
+      - id: go-vet
+        files: "^(cmd|internal)/.*\\.go$"
+  - repo: https://github.com/golangci/golangci-lint
+    rev: "v1.56.2"
+    hooks:
+      - id: golangci-lint
+        args: ["run", "--config=.golangci.yml", "--timeout=5m"]
+        files: "^(cmd|internal)/.*\\.go$"
+        require_serial: true
