--- a/.github/workflows/go-ci.yml
+++ b/.github/workflows/go-ci.yml
@@ -53,12 +53,14 @@ jobs:
       with:
         name: test-results
         path: test-results/
+
     - name: Upload server logs
       if: always()
       uses: actions/upload-artifact@v4
       with:
         name: server-logs
         path: test-results/*.log
+
     - name: Generate coverage summary
       run: |
         go tool cover -func=coverage.out -o coverage-summary.txt
@@ -66,7 +68,7 @@ jobs:
     - name: Generate coverage badge
       uses: tj-actions/coverage-badge-go@v2
       with:
-        go-test-cover-profile: coverage.out
+        filename: coverage.out
 
     - name: Upload coverage artifact
       uses: actions/upload-artifact@v4
