--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "prepare": "husky install",
+    "precommit": "pre-commit run --all-files",
+    "commitmsg": "commitlint --edit $1",
     "test": "scripts/test.cmd",
     "test:backend": "scripts/test.cmd backend",
     "test:all": "scripts/test.cmd all",
@@ -25,13 +28,16 @@
   "homepage": "https://github.com/alexandru-savinov/BalancedNewsGo#readme",
   "description": "",
   "devDependencies": {
+    "@commitlint/cli": "^17.8.4",
+    "@commitlint/config-conventional": "^17.8.4",
     "@stoplight/spectral-cli": "^6.11.0",
     "@types/eventsource": "^1.1.15",
     "@types/node": "^22.14.1",
     "eventsource": "^3.0.6",
     "newman": "^6.2.1",
     "puppeteer": "^24.9.0",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "husky": "^8.0.0"
   },
   "dependencies": {
     "dotenv": "^16.5.0",
