--- a/.gitignore
+++ b/.gitignore
@@ -62,6 +62,7 @@ news.db-wal
 # Coverage & Test Reports (extending existing)
 # *.out is already covered above
 *.html
+coverage*
 # /test-results/ is already covered above
 # /playwright-report/ is already covered above
 
