Make generate_report base URL configurable

--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,9 @@ LLM_BASE_URL=https://openrouter.ai/api/v1/chat/completions
 # Timeout for HTTP requests to LLM service
 LLM_HTTP_TIMEOUT=60s
 
+# Base URL for report generation script
+REPORT_BASE_URL=http://localhost:8080
+
 # Disable automatic background analysis (useful for testing)
 NO_AUTO_ANALYZE=false
 
