--- a/.gitignore
+++ b/.gitignore
@@ -65,6 +65,7 @@ internal/db/*.db*
 # Coverage & Test Reports (extending existing)
 # *.out is already covered above
 *.html
+coverage*
 # /test-results/ is already covered above
 # /playwright-report/ is already covered above
 
