--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "newman": "^6.2.1",
     "puppeteer": "^24.9.0",
     "typescript": "^5.8.3",
-    "husky": "^8.0.0"
+    "husky": "^8.0.0",
+    "jest": "^29.7.0"
   },
   "dependencies": {
     "dotenv": "^16.5.0",
