--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "@stoplight/spectral-cli": "^6.11.0",
     "@types/eventsource": "^1.1.15",
     "@types/node": "^22.14.1",
-    "eventsource": "^3.0.6",
+    "eventsource": "^3.0.7",
+    "jsdom": "^26.1.0",
     "newman": "^6.2.1",
     "typescript": "^5.8.3"
   },
