feat: implement comprehensive test improvements and E2E test suite
- Enhanced Go test files with proper import aliases and function signatures
- Added comprehensive accessibility testing with axe-core integration
- Implemented HTMX functionality tests with helper utilities
- Added mobile responsiveness tests for multiple device types
- Implemented performance testing with Core Web Vitals validation
- Added global setup/teardown for test orchestration
- Created comprehensive test utilities and helper functions
- Improved test infrastructure with proper error handling
- Added proper package dependencies for testing ecosystem
- Enhanced PowerShell test runner with real-time status assessment

This commit significantly improves the testing infrastructure and addresses
the Phase 3 requirements for E2E test stabilization.

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "homepage": "https://github.com/alexandru-savinov/BalancedNewsGo#readme",
   "description": "",
   "devDependencies": {
+    "@axe-core/playwright": "^4.10.2",
     "@playwright/test": "^1.53.0",
     "@stoplight/spectral-cli": "^6.11.0",
     "@types/eventsource": "^1.1.15",
