--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   "description": "",
   "devDependencies": {
     "@axe-core/playwright": "^4.10.2",
-    "@playwright/test": "^1.53.0",
+    "@playwright/test": "^1.53.1",
     "@stoplight/spectral-cli": "^6.11.0",
     "@types/eventsource": "^1.1.15",
     "@types/node": "^22.14.1",
@@ -39,7 +39,8 @@
     "jest-environment-jsdom": "^30.0.0",
     "jsdom": "^26.1.0",
     "newman": "^6.2.1",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "undici-types": "^7.10.0"
   },
   "dependencies": {
     "dotenv": "^16.5.0",
