Fix linting issues and improve code quality
- Install and configure golangci-lint in Makefile with proper path
- Fix undefined field references in integration tests (BiasLabel, AnalysisNotes)
- Update .golangci.yml to use exclude-files instead of deprecated skip-files
- Remove references to non-existent Article struct fields in wrapper tests
- All linters now pass without warnings or errors

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,9 +1,9 @@
 run:
   skip-tests: true
-  skip-files:
-    - "_test\\.go$"
 
 issues:
+  exclude-files:
+    - "_test\\.go$"
   exclude-rules:
     - path: "_test\\.go$"
       linters:
