feat: Configure secure GitHub Secrets for LLM API keys in CI/CD
- Replace hardcoded dummy API keys with GitHub Secrets references
- Update both ci.yml and go-ci.yml workflows to use secrets.LLM_API_KEY, secrets.LLM_API_KEY_SECONDARY, and secrets.LLM_BASE_URL
- Add comprehensive documentation for setting up GitHub Secrets securely
- Include troubleshooting guide and security best practices
- Enable proper LLM authentication in CI/CD while maintaining security

This allows the CI/CD pipeline to use real API keys securely without exposing them in code or logs.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -119,9 +119,9 @@ jobs:
         env:
           DATABASE_URL: postgres://postgres:postgres@localhost:5432/newsbalancer_test?sslmode=disable
           NO_AUTO_ANALYZE: "true"
-          LLM_API_KEY: "test-key-ci"
-          LLM_API_KEY_SECONDARY: "test-secondary-key-ci"
-          LLM_BASE_URL: "https://openrouter.ai/api/v1/chat/completions"
+          LLM_API_KEY: ${{ secrets.LLM_API_KEY }}
+          LLM_API_KEY_SECONDARY: ${{ secrets.LLM_API_KEY_SECONDARY }}
+          LLM_BASE_URL: ${{ secrets.LLM_BASE_URL }}
         run: |
           go test -v -race -coverprofile=coverage.out -covermode=atomic ./...
 
@@ -196,9 +196,9 @@ jobs:
           DATABASE_URL: postgres://postgres:postgres@localhost:5432/newsbalancer_test?sslmode=disable
           NO_AUTO_ANALYZE: "true"
           PORT: 8080
-          LLM_API_KEY: "test-key-ci"
-          LLM_API_KEY_SECONDARY: "test-secondary-key-ci"
-          LLM_BASE_URL: "https://openrouter.ai/api/v1/chat/completions"
+          LLM_API_KEY: ${{ secrets.LLM_API_KEY }}
+          LLM_API_KEY_SECONDARY: ${{ secrets.LLM_API_KEY_SECONDARY }}
+          LLM_BASE_URL: ${{ secrets.LLM_BASE_URL }}
         run: |
           ./newsbalancer &
           APP_PID=$!
@@ -303,9 +303,9 @@ jobs:
       - name: Test Docker image
         run: |
           docker run --rm -d --name newsbalancer-test -p 8080:8080 \
-            -e LLM_API_KEY="test-key-ci" \
-            -e LLM_API_KEY_SECONDARY="test-secondary-key-ci" \
-            -e LLM_BASE_URL="https://openrouter.ai/api/v1/chat/completions" \
+            -e LLM_API_KEY="${{ secrets.LLM_API_KEY }}" \
+            -e LLM_API_KEY_SECONDARY="${{ secrets.LLM_API_KEY_SECONDARY }}" \
+            -e LLM_BASE_URL="${{ secrets.LLM_BASE_URL }}" \
             newsbalancer:test
           sleep 10
           
@@ -363,9 +363,9 @@ jobs:
           DATABASE_URL: postgres://postgres:postgres@localhost:5432/newsbalancer_test?sslmode=disable
           NO_AUTO_ANALYZE: "true"
           PORT: 8080
-          LLM_API_KEY: "test-key-ci"
-          LLM_API_KEY_SECONDARY: "test-secondary-key-ci"
-          LLM_BASE_URL: "https://openrouter.ai/api/v1/chat/completions"
+          LLM_API_KEY: ${{ secrets.LLM_API_KEY }}
+          LLM_API_KEY_SECONDARY: ${{ secrets.LLM_API_KEY_SECONDARY }}
+          LLM_BASE_URL: ${{ secrets.LLM_BASE_URL }}
         run: |
           ./newsbalancer &
           APP_PID=$!
