--- a/.github/workflows/go-ci.yml
+++ b/.github/workflows/go-ci.yml
@@ -33,6 +33,7 @@ jobs:
     - name: Run Go unit and integration tests (NO_AUTO_ANALYZE=true)
       env:
         NO_AUTO_ANALYZE: "true"
+        NO_DOCKER: "true"
         LLM_API_KEY: ${{ secrets.LLM_API_KEY }}
         LLM_API_KEY_SECONDARY: ${{ secrets.LLM_API_KEY_SECONDARY }}
         LLM_BASE_URL: ${{ secrets.LLM_BASE_URL }}
