--- a/.github/workflows/go-ci.yml
+++ b/.github/workflows/go-ci.yml
@@ -40,6 +40,16 @@ jobs:
       run: |
         go test -v -coverprofile=coverage.out ./...
 
+    - name: Set up Node.js for Newman tests
+      if: runner.os == 'Linux'
+      uses: actions/setup-node@v4
+      with:
+        node-version: '18'
+
+    - name: Install Newman for API testing
+      if: runner.os == 'Linux'
+      run: npm install -g newman
+
     - name: Run full API/integration test suite (scripts/test.sh all)
       if: runner.os == 'Linux'
       env:
