Implement robust server cleanup for CI/CD integration tests
PROBLEM SOLVED:
- Integration tests were passing functionally but failing due to I/O timeout during cleanup
- 'go run' command creates child processes that don't cleanup properly in CI
- Test runner reports FAIL due to 'Test I/O incomplete 1m0s after exiting'

COMPREHENSIVE SOLUTION:

1. CI-Specific Process Management:
   - Use pre-compiled binary (test-server-ci) instead of 'go run' in CI environments
   - Immediate force kill in CI to avoid I/O timeout issues
   - Skip process waiting in CI environments

2. Enhanced Cleanup Logic:
   - Environment-specific cleanup strategies (CI vs local)
   - Reduced timeout from 5s to 2s for faster cleanup
   - Better error handling for process termination
   - Don't return errors for expected process termination

3. GitHub Actions Workflow Enhancement:
   - Added step to build test-server-ci binary before running tests
   - Binary approach eliminates go run I/O issues in CI

4. Improved Error Handling:
   - Handle 'process already finished' errors gracefully
   - Ignore expected exit codes from interrupted processes
   - Better logging for process cleanup debugging

VALIDATION APPROACH:
- Tests pass functionally (all API endpoints work correctly)
- Server startup and health checks work reliably
- Performance tests complete successfully
- Only remaining issue is I/O timeout during cleanup

EXPECTED IMPACT:
- CI/CD pipeline should now pass completely
- Integration tests will run reliably in CI environments
- No more 'Test I/O incomplete' failures
- Maintains full test coverage while fixing cleanup issues

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -89,7 +89,10 @@ jobs:
       - name: Install dependencies
         run: go mod download
 
-
+      - name: Build test server binary for CI
+        run: |
+          go build -o test-server-ci ./cmd/server
+          chmod +x test-server-ci
 
       - name: Run unit tests
         env:
