--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -89,12 +89,31 @@ jobs:
       - name: Install dependencies
         run: go mod download
 
+      - name: Install additional testing tools
+        run: |
+          # Install golangci-lint for static analysis
+          curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.55.2
+          # Install staticcheck for advanced static analysis
+          go install honnef.co/go/tools/cmd/staticcheck@latest
+          # Install goleak for goroutine leak detection
+          go get -t go.uber.org/goleak
+
+      - name: Run static analysis for concurrency issues
+        run: |
+          echo "Running static analysis for concurrency issues..."
+          # Check for common concurrency issues
+          go vet -composites=false ./...
+          # Run staticcheck for advanced concurrency analysis
+          staticcheck ./...
+          # Run golangci-lint with concurrency-focused linters
+          golangci-lint run --enable=govet,staticcheck,gosec,errcheck,ineffassign,misspell ./...
+
       - name: Build test server binary for CI
         run: |
           go build -o test-server-ci ./cmd/server
           chmod +x test-server-ci
 
-      - name: Run unit tests
+      - name: Run unit tests with stress testing
         env:
           NO_AUTO_ANALYZE: "true"
           NO_DOCKER: "true"
@@ -102,7 +121,17 @@ jobs:
           LLM_API_KEY_SECONDARY: ${{ secrets.LLM_API_KEY_SECONDARY }}
           LLM_BASE_URL: ${{ secrets.LLM_BASE_URL }}
         run: |
-          go test -v -race -coverprofile=coverage.out -covermode=atomic ./...
+          echo "Running unit tests with concurrency stress testing..."
+          # Run tests multiple times to catch race conditions
+          echo "Running tests 5 times to catch intermittent issues..."
+          for i in {1..5}; do
+            echo "Test run $i/5"
+            go test -v -count=1 -parallel=4 -coverprofile=coverage-$i.out -covermode=atomic ./... || exit 1
+          done
+          # Merge coverage files
+          echo "mode: atomic" > coverage.out
+          tail -n +2 coverage-*.out >> coverage.out
+          rm coverage-*.out
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v4
