--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -123,15 +123,16 @@ jobs:
         run: |
           echo "Running unit tests with concurrency stress testing..."
           # Run tests multiple times to catch race conditions
-          echo "Running tests 5 times to catch intermittent issues..."
-          for i in {1..5}; do
-            echo "Test run $i/5"
-            go test -v -count=1 -parallel=4 -coverprofile=coverage-$i.out -covermode=atomic ./... || exit 1
-          done
-          # Merge coverage files
-          echo "mode: atomic" > coverage.out
-          tail -n +2 coverage-*.out >> coverage.out
-          rm coverage-*.out
+          echo "Running tests 3 times to catch intermittent issues..."
+          go test -v -count=1 -parallel=4 -coverprofile=coverage-1.out -covermode=atomic ./... || exit 1
+          echo "Test run 1/3 completed"
+          go test -v -count=1 -parallel=4 -coverprofile=coverage-2.out -covermode=atomic ./... || exit 1
+          echo "Test run 2/3 completed"
+          go test -v -count=1 -parallel=4 -coverprofile=coverage-3.out -covermode=atomic ./... || exit 1
+          echo "Test run 3/3 completed"
+          # Use the last coverage file
+          mv coverage-3.out coverage.out
+          rm -f coverage-*.out
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v4
